[package]
name = "bzip3"
authors = ["bczhc <bczhc0@126.com>"]
version = "0.8.1"
edition = "2021"
license = "LGPL-3.0-only"
readme = "README.md"
description = "BZip3 compression library"
repository = "https://github.com/bczhc/bzip3-rs"
homepage = "https://github.com/bczhc/bzip3-rs"
documentation = "https://docs.rs/bzip3/latest/bzip3"
keywords = ["compression", "decompression", "encoding"]
categories = ["compression", "api-bindings"]

[workspace]
members = ["libbzip3-sys"]

[dependencies]
thiserror = "1.0.38"
byteorder = "1.4.3"
bytesize = "1.1.0"
libbzip3-sys = { path = "libbzip3-sys", version = "0.3.3+1.3.2" }

[dev-dependencies]
clap = "4.0.32"
anyhow = "1.0.68"
rand = "0.8.5"
regex = "1.7.1"
rayon = "1.7.0"

[features]
bundled = ["libbzip3-sys/bundled"]

[package.metadata.docs.rs]
features = ["bundled"]
