[package]
name = "libbzip3-sys"
authors = ["bczhc <bczhc0@126.com>"]
version = "0.2.1"
edition = "2021"
build = "build.rs"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "FFI bindings to libbzip3"
repository = "https://github.com/bczhc/bzip3-rs"
homepage = "https://github.com/bczhc/bzip3-rs"
documentation = "https://github.com/bczhc/bzip3-rs"
keywords = ["compression", "decompression", "encoding", "ffi"]
categories = ["compression", "api-bindings", "external-ffi-bindings"]
exclude = [
    "bzip3/examples",
    "bzip3/etc",
]

[dependencies]

[build-dependencies]
bindgen = "0.63.0"
regex = "1.7.1"
cc = "1.0.78"
cfg-if = "1.0.0"

[features]
bundled = []

[package.metadata.docs.rs]
features = ["bundled"]
