[package]
name = "libbzip3-sys"
authors = ["bczhc <bczhc0@126.com>"]
version = "0.4.0+1.4.0"
edition = "2021"
build = "build.rs"
license = "LGPL-3.0-only"
readme = "README.md"
description = "FFI bindings to libbzip3"
repository = "https://github.com/bczhc/bzip3-rs"
homepage = "https://github.com/bczhc/bzip3-rs"
documentation = "https://docs.rs/libbzip3-sys/latest/libbzip3_sys"
keywords = ["compression", "decompression", "encoding", "ffi"]
categories = ["compression", "api-bindings", "external-ffi-bindings"]
exclude = [
    "bzip3/examples",
    "bzip3/etc",
]

[dependencies]

[build-dependencies]
bindgen = "0.63.0"
regex = "1.7.1"
cc = "1.0.78"
cfg-if = "1.0.0"

[features]
bundled = []

[package.metadata.docs.rs]
features = ["bundled"]
